--- a/計算機概論5章和6章答案.md
+++ b/計算機概論5章和6章答案.md
@@ -58,4 +58,34 @@ File Manager
 
 3.系統核心的功用
 
+一個用來管理軟體發出的資料I/O（輸入與輸出）要求的電腦程式，將這些要求轉譯為資料處理的指令並交由中央處理器（CPU）及電腦中其他電子元件進行處理
+
+4.請解釋 SWAP File這個意義
+配置一部份的記憶體在儲存媒介中
+
+5.何為緩衝區
+暫時置放輸出或輸入資料的記憶體。
+
+6.請問記憶體常駐(resident)和非常駐(non resident)的差異
+
+resident:常駐軟體 通常是系統軟體和驅動程式需要常駐 
+non resident:非常駐軟體 在需要時才被載入到記憶體執行
+
+7.裝置無關(device independence) 的優點是什麼:
+在每台電腦上都能執行 不挑硬體
+
+8.請說明電腦進入sleep mode會發生什麼?
+
+將作業系統的資料存入記憶體內 以最低電力保持運作
+
+9.Operating System發生thrashing時是什麼意思 
+
+DRAM容量不足以支撐目前的工作量
+
+10.請說明單工與多工作業系統有什麼差別
+單人單工:同一時間只能有一個使用者，且只能執行一項工作的作業系統, 如 MS-DOS
+
+多人多工:多工作業系統是指電腦在同一時間可同時多人使用，並能執行多項工作的作業系統，如 Linux 、 Unix 、 FreeBSD
+等。
+
 ```
